# ai-eval-kit

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: coach.py  dashboard.py  practice.py  trace_viewer.py
docs/: getting_started.md
evalkit/: __init__.py  challenges.py  cli.py  coach.py  config.py  graders.py  judge.py  loader.py  models.py  reporter.py  runner.py  scaffold.py  synthetic.py
evalkit/coach_engine/: __init__.py  campaign.py  evaluator.py  pathway.py  profile.py  simulator.py
examples/ai_agent/: product.yaml
examples/chatbot/: product.yaml
examples/search_engine/: product.yaml
